--- a/org.csstudio.archive.reader.influxdb/src/org/csstudio/archive/reader/influxdb/messages.properties
+++ b/org.csstudio.archive.reader.influxdb/src/org/csstudio/archive/reader/influxdb/messages.properties
@@ -1,7 +1,6 @@
 FetchSize=Fetch Size:
 Password=Password:
-PreferenceTitle=RDB Archive Reader Settings
-Schema=Database Schema:
+PreferenceTitle=InfluxDB Archive Reader Settings
 StoredProcedure=Stored procedure:
-UseBLOB=Use BLOB for array storage
 User=User:
+URL=URL:
