--- a/org.csstudio.archive.reader.influxdb.raw/src/org/csstudio/archive/reader/influxdb/raw/messages.properties
+++ b/org.csstudio.archive.reader.influxdb.raw/src/org/csstudio/archive/reader/influxdb/raw/messages.properties
@@ -1,6 +1,6 @@
 FetchSize=Fetch Size:
 Password=Password:
-PreferenceTitle=InfluxDB Archive Reader Settings
+PreferenceTitle=InfluxDB Raw Reader Settings
 StoredProcedure=Stored procedure:
 User=User:
 URL=URL:
