Code cleanup. Added parsing for series PV (line protocol)

--- a/org.csstudio.archive.reader.influxdb.raw/src/org/csstudio/archive/reader/influxdb/raw/messages.properties
+++ b/org.csstudio.archive.reader.influxdb.raw/src/org/csstudio/archive/reader/influxdb/raw/messages.properties
@@ -1,6 +1,6 @@
 FetchSize=Fetch Size:
-Password=Password:
+Password=Default InfluxDB Password:
 PreferenceTitle=InfluxDB Raw Reader Settings
 StoredProcedure=Stored procedure:
-User=User:
+User=Default InfluxDB Username:
 URL=URL:
