Added preference page items for influxDB database names

--- a/org.csstudio.archive.reader.influxdb.raw/src/org/csstudio/archive/reader/influxdb/raw/messages.properties
+++ b/org.csstudio.archive.reader.influxdb.raw/src/org/csstudio/archive/reader/influxdb/raw/messages.properties
@@ -1,3 +1,6 @@
+DBData=Data DB Suffix
+DBMeta=Metadata DB Suffix
+DBPrefix=DB Name Prefix
 FetchSize=Fetch Size:
 Password=Default InfluxDB Password:
 PreferenceTitle=InfluxDB Raw Reader Settings
